Big write up addition

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -133,3 +133,47 @@ doi = {10.1146/annurev.ps.46.020195.003021}
 	journal = {Proceedings of the National Academy of Sciences}
 }
 
+@article{Angrist_Evans,
+ ISSN = {00028282},
+ URL = {http://www.jstor.org/stable/116844},
+ abstract = {Research on the labor-supply consequences of childbearing is complicated by the endogeneity of fertility. This study uses parental preferences for a mixed sibling-sex composition to construct instrumental variables (IV) estimates of the effect of childbearing on labor supply. IV estimates for women are significant but smaller than ordinary least-squares estimates. The IV are also smaller for more educated women and show no impact of family size on husbands' labor supply. A comparison of estimates using sibling-sex composition and twins instruments implies that the impact of a third child disappears when the child reaches age 13.},
+ author = {Joshua D. Angrist and William N. Evans},
+ journal = {The American Economic Review},
+ number = {3},
+ pages = {450--477},
+ publisher = {American Economic Association},
+ title = {Children and Their Parents' Labor Supply: Evidence from Exogenous Variation in Family Size},
+ volume = {88},
+ year = {1998}
+}
+
+
+@article{Angrist_Lavy,
+    author = {Lavy, Victor and Angrist, Joshua D.},
+    title = "{Using Maimonides' Rule to Estimate the Effect of Class Size on Scholastic Achievement*}",
+    journal = {The Quarterly Journal of Economics},
+    volume = {114},
+    number = {2},
+    pages = {533-575},
+    year = {1999},
+    month = {05},
+    abstract = "{The twelfth century rabbinic scholar Maimonides proposed a maximum class size of 40. This same maximum induces a nonlinear and nonmonotonic relationship between grade enrollment and class size in Israeli public schools today. Maimonides' rule of 40 is used here to construct instrumental variables estimates of effects of class size on test scores. The resulting identification strategy can be viewed as an application of Donald Campbell's regression-discontinuity design to the class-size question. The estimates show that reducing class size induces a significant and substantial increase in test scores for fourth and fifth graders, although not for third graders.}",
+    issn = {0033-5533},
+    doi = {10.1162/003355399556061},
+    url = {https://dx.doi.org/10.1162/003355399556061},
+    eprint = {http://oup.prod.sis.lan/qje/article-pdf/114/2/533/5218384/114-2-533.pdf},
+}
+
+@article{Autor_Dorn_Hanson,
+Author = {Autor, David H. and Dorn, David and Hanson, Gordon H.},
+Title = {The China Syndrome: Local Labor Market Effects of Import Competition in the United States},
+Journal = {American Economic Review},
+Volume = {103},
+Number = {6},
+Year = {2013},
+Month = {October},
+Pages = {2121-68},
+DOI = {10.1257/aer.103.6.2121},
+URL = {http://www.aeaweb.org/articles?id=10.1257/aer.103.6.2121}}
+
+
